tests/fail/stable/invalid_radix_option.stderr
error: config modifier '#' can only be used with 'x', 'o' or 'b':
       At "{:#x#}"
             ^^^
 --> tests/fail/stable/invalid_radix_option.rs:2:25
  |
2 |     sscanf::sscanf!("", "{:#x#}", u8);
  |                         ^^^^^^^^

error: config modifier '#' can only be used with 'x', 'o' or 'b':
       At "{:#r16}"
             ^^^^
 --> tests/fail/stable/invalid_radix_option.rs:3:25
  |
3 |     sscanf::sscanf!("", "{:#r16}", u8);
  |                         ^^^^^^^^^

error: config modifier '#' can only be used with 'x', 'o' or 'b':
       At "{:r16#}"
             ^^^^
 --> tests/fail/stable/invalid_radix_option.rs:4:25
  |
4 |     sscanf::sscanf!("", "{:r16#}", u8);
  |                         ^^^^^^^^^

error: radix option 'r' has to be followed by a number:
       At "{:r}"
             ^
 --> tests/fail/stable/invalid_radix_option.rs:5:25
  |
5 |     sscanf::sscanf!("", "{:r}", u8);
  |                         ^^^^^^

error: radix has to be a number between 2 and 36:
       At "{:r99}"
             ^^^
 --> tests/fail/stable/invalid_radix_option.rs:6:25
  |
6 |     sscanf::sscanf!("", "{:r99}", u8);
  |                         ^^^^^^^^

error: radix has to be a number between 2 and 36:
       At "{:r1}"
             ^^
 --> tests/fail/stable/invalid_radix_option.rs:7:25
  |
7 |     sscanf::sscanf!("", "{:r1}", u8);
  |                         ^^^^^^^

error: radix options only work on primitive numbers from std with no path or alias
 --> tests/fail/stable/invalid_radix_option.rs:8:33
  |
8 |     sscanf::sscanf!("", "{:x}", std::u8);
  |                                 ^^^^^^^
